[gd_scene load_steps=4 format=3 uid="uid://4apy8qid2o6t"]

[ext_resource type="Script" path="res://cards/card.gd" id="1_w6maa"]
[ext_resource type="Texture2D" uid="uid://brq5b6tnkh4wf" path="res://cards/texture/1C.png" id="2"]
[ext_resource type="Resource" path="res://cards/tres/10S.tres" id="2_i2mwn"]

[node name="Card" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_w6maa")
card_resource = ExtResource("2_i2mwn")

[node name="t_card" type="TextureRect" parent="."]
layout_mode = 0
texture = ExtResource("2")

[node name="timer_preview" type="Timer" parent="."]
wait_time = 0.3

[node name="timer_release" type="Timer" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_Card_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Card_mouse_exited"]
[connection signal="timeout" from="timer_preview" to="." method="_on_timer_preview_timeout"]
[connection signal="timeout" from="timer_release" to="." method="_on_timer_release_timeout"]
